export enum PaymentStatus {
  Pending,
  Payed
}
