export enum UserStatus {
  Active,
  Blocked,
  Canceled,
}
