export enum OrderType {
  Buy,
  Sell,
}
